# MCsim_phase1

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  compile_commands.json
Common/Xbox/: XboxController.cpp  XboxController.hpp
Controller/include/: Base.hpp
Controller/src/: Base.cpp
MC_phase1/: MC_phase1.sln
MC_phase1/MC_phase1/: ClassDiagram.cd  ClassDiagram1.cd  ClassDiagram2.cd  ClassDiagram3.cd  ClassDiagram4.cd  MC_phase1.vcxproj  MC_phase1.vcxproj.filters
OpenGL/glsl/: shadow_mapping_standard_fs.glsl  shadow_mapping_standard_vs.glsl
OpenGL/include/: PostProcessing.hpp  Supervisor.hpp  World.hpp
OpenGL/models/: QuadAll.asm  QuadAll.cfg  QuadAll.sat  QuadBody.asm  QuadBody.cfg  QuadBody.sat
OpenGL/models/QuadCopter/: OMA-2810-1250.par  OMA-2810-1250_outer.par  OMA-2810-1250_outer.sat
OpenGL/src/: Importer.cpp  Object.cpp  PostProcessing.cpp  Supervisor.cpp  World.cpp  main.cpp  shader.cpp  texture.cpp
Sim/include/: MC.hpp
Sim/src/: MC_components.cpp  MC_core.cpp
include/Controller/: Base.hpp  Controller_PIDeuler.hpp  Controller_test.hpp
include/Manager/: Manager.hpp
include/Sim/: MC.hpp
src/Controller/: Base.cpp  Controller_PIDeuler.cpp  Controller_test.cpp
src/Manager/: Manager.cpp
src/Sim/: MC_components.cpp  MC_core.cpp  MC_generator.cpp
